# Hashmap

./: .gitignore  CMakeLists.txt  FNV-1a.c  HashMap.c  HashMap.h  HashMap_methods.c  HashMap_prototypes.h  HashMap_struct_def.h  MurmurHash3.c  README.md  common_callback_types.h  compiler_attributes_macros.h  len_type.h  profile.sh  roundup.c
benchmarks/: CMakeLists.txt  benchmark_HashMap.c  time_HashMap.c
tests/: CMakeLists.txt  test_HashMap.c
u8mem/: CMakeLists.txt  u8mem.c  u8mem.h
xalloc/: CMakeLists.txt  xalloc.c  xalloc.h
